--- a/index.html
+++ b/index.html
@@ -339,19 +339,19 @@
               <div class="swiper-slide">
                 <p>오다 주웠다!<br>
                   사주고 칭찬 받는 선물</p>
-                <div class="g-more">MORE VIEW ></div>
+                <a href="#" class="g-more">MORE VIEW ></a>
                 <img src="img/gift_01.png" alt="오다 주웠다! 사주고 칭찬 받는 선물">
               </div>
               <div class="swiper-slide">
                 <p>마음 가는 대로<br>
                   자유롭게 써봐요</p>
-                <div class="g-more">MORE VIEW ></div>
+                <a href="#" class="g-more">MORE VIEW ></a>
                 <img src="img/gift_02.png" alt="마음 가는 대로 자유롭게 써봐요">
               </div>
               <div class="swiper-slide">
                 <p>이렇게 날 좋은데<br>
                   우리 같이 나갈까요?</p>
-                <div class="g-more">MORE VIEW ></div>
+                <a href="#" class="g-more">MORE VIEW ></a>
                 <img src="img/gift_03.png" alt="이렇게 날 좋은데 우리 같이 나갈까요?">
               </div>
             </div>
