--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>mimidar</title>
+  <link rel="icon" type="image/png" sizes="40x40" href="img/favicon.png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/ani.css">
@@ -113,7 +114,7 @@
             <p>미미달이 추구하는 전통과<br>
               현대의 미학을 상징 <br>
               전통의 가치를 이어나가겠다는 다짐</p>
-              <a href="#" class="s-more">OUR STORY ></a>
+              <div class="s-more"><a href="#">OUR STORY ></a></div>
           </div><!--s-main-->
   
           <div class="flow-wrap">
@@ -123,10 +124,18 @@
                 <li><img src="img/flow_02.png" alt="이미지2"></li>
                 <li><img src="img/flow_03.png" alt="이미지3"></li>
                 <li><img src="img/flow_04.jpg" alt="이미지4"></li>
+                <li><img src="img/flow_05.png" alt="이미지5"></li>
+                <li><img src="img/flow_06.png" alt="이미지6"></li>
+                <li><img src="img/flow_07.jpg" alt="이미지7"></li>
+                <li><img src="img/flow_08.jpg" alt="이미지8"></li>
               </ul>
             </div><!--img-left-->
             <div class="img-right">
               <ul>
+                <li><img src="img/flow_01.jpg" alt="이미지1"></li>
+                <li><img src="img/flow_02.png" alt="이미지2"></li>
+                <li><img src="img/flow_03.png" alt="이미지3"></li>
+                <li><img src="img/flow_04.jpg" alt="이미지4"></li>
                 <li><img src="img/flow_05.png" alt="이미지5"></li>
                 <li><img src="img/flow_06.png" alt="이미지6"></li>
                 <li><img src="img/flow_07.jpg" alt="이미지7"></li>
@@ -361,7 +370,16 @@
           </div>
         </div><!--inner-->
       </section><!--gift-->
-    </div>
+      <footer>
+        <div class="inner">
+          <h2>
+            <a href="#">
+              <img src="img/mimidar_logo_w.png" alt="mimidar">
+            </a>
+          </h2>
+        </div><!--inner-->
+      </footer>
+    </div><!--s-wrap-->
   </div><!--#wrap-->
 </body>
 </html>
