--- a/index-2.html
+++ b/index-2.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>mimidar</title>
+
   <link rel="icon" type="image/png" sizes="40x40" href="img/favicon.png">
   
   <link rel="stylesheet" href="css/reset.css">
@@ -19,95 +20,99 @@
   <div id="wrap">
     <header>
       <div class="inner">
-        <h1><a href="#main"><img src="img/mimidar_logo_h.png" alt="mimidar"></a></h1>
-
-      <div class="q-menu">
-        <div class="lang">
-          <a href="#" class="kor">KOR</a>
-          <a href="#" class="eng">ENG</a>
-        </div><!--lang-->
-        <a href="#" class="cart"></a>
-        <a href="#" class="search"><img src="img/icon_search.png" alt="검색하기"></a>
-      </div><!--q-menu-->
-
-      <nav>
         <div class="ham clear">
           <a href="#">
           <span>메뉴 열기</span>
           </a>
         </div>
-        
-        <ul class="gnb">
-          <li class="depth1">
-            <a href="#">BRAND</a>
-            <ul class="depth2">
-              <li><a href="#">OUR STORY</a></li>
-              <li><a href="#">BRAND IDENTITY</a></li>
-            </ul>
-          </li>
-          <li class="depth1">
-            <a href="#">SHOP</a>
-            <ul class="depth2">
-              <li><a href="#">ALL</a></li>
-              <li><a href="#">BEST & NEW</a></li>
-              <li><a href="#">추천 선물</a></li>
-            </ul>
-          </li>
-          <li class="depth1">
-            <a href="#">BIG ORDER</a>
-            <ul class="depth2">
-              <li><a href="#">로고 인쇄 & 고급 포장</a></li>
-              <li><a href="#">주문하기</a></li>
-            </ul>
-          </li>
-          <li class="depth1">
-            <a href="#">COLLABORATION</a>
-          </li>
-          <li class="depth1">
-            <a href="#">MIMIDAR NEWS</a>
-            <ul class="depth2">
-              <li><a href="#">magazine | 미미달 책갈피</a></li>
-              <li><a href="#">media | 언론 보도</a></li>
-              <li><a href="#">공지 | CS</a></li>
-              <li><a href="#">멤버십 혜택</a></li>
-            </ul>
-          </li>
-        </ul>
-        <div class="menu-close"></div>
-        <div class="dim"></div>
-      </nav>
 
-      <div class="search-open">
-        <form>
-          <fieldset>
-            <legend>검색영역</legend>
-            <input type="text" placeholder="검색어를 입력하세요">
-            <button type="button"></button>
-          </fieldset>
-        </form>
-        <div class="search-close clear">검색창 닫기</div>
+        <h1>
+          <a href="#main"><img src="img/mimidar_logo_h.png" alt="mimidar"></a>
+        </h1>
+
+        <nav>
+          <ul class="gnb">
+            <li class="depth1">
+              <a href="#">BRAND</a>
+              <ul class="depth2">
+                <li><a href="#">OUR STORY</a></li>
+                <li><a href="#">BRAND IDENTITY</a></li>
+              </ul>
+            </li>
+            <li class="depth1">
+              <a href="#">SHOP</a>
+              <ul class="depth2">
+                <li><a href="#">ALL</a></li>
+                <li><a href="#">BEST & NEW</a></li>
+                <li><a href="#">추천 선물</a></li>
+              </ul>
+            </li>
+            <li class="depth1">
+              <a href="#">BIG ORDER</a>
+              <ul class="depth2">
+                <li><a href="#">로고 인쇄 & 고급 포장</a></li>
+                <li><a href="#">주문하기</a></li>
+              </ul>
+            </li>
+            <li class="depth1">
+              <a href="#">COLLABORATION</a>
+            </li>
+            <li class="depth1">
+              <a href="#">MIMIDAR NEWS</a>
+              <ul class="depth2">
+                <li><a href="#">magazine | 미미달 책갈피</a></li>
+                <li><a href="#">media | 언론 보도</a></li>
+                <li><a href="#">공지 | CS</a></li>
+                <li><a href="#">멤버십 혜택</a></li>
+              </ul>
+            </li>
+          </ul>
+          <div class="q-menu">
+            <div class="lang">
+              <a href="#" class="kor">KOR</a>
+              <a href="#" class="eng">ENG</a>
+            </div><!--lang-->
+            <a href="#" class="cart"></a>
+            <a href="#" class="search"><img src="img/icon_search.png" alt="검색하기"></a>
+          </div><!--q-menu-->
+          <div class="menu-close"></div>
+          <div class="dim"></div>
+          <div class="search-open">
+            <form>
+              <fieldset>
+                <legend>검색영역</legend>
+                <input type="text" placeholder="검색어를 입력하세요">
+                <button type="button"></button>
+              </fieldset>
+            </form>
+            <div class="search-close clear">검색창 닫기</div>
+          </div>
+        </nav>
       </div>
-      </div><!--inner-->
     </header>
-    
-    <div id="s-wrap">
-      <section id="main">
-        <div>
-          <video src="img/brand_film.mp4" loop muted autoplay playsinline></video>
-        </div>
-      </section><!--main-->
 
-      <section id="prologue">
-        <div class="p-img"></div>
-        <div class="p-txt">
-          <h2>MIMIDAR</h2>
-          <p>행福을 전하는 미미달</p>
-          <span>복을 염원하는 선조들의 마음을 담아<br>
+    <div id="container">
+      <div id="main">
+        <div class="inner">
+          <div>
+            <video src="img/brand_film.mp4" loop muted autoplay playsinline></video>
+          </div>
+        </div>
+      </div><!--#main-->
+
+      <div id="prologue">
+        <div class="inner">
+          <div class="p-img"></div>
+          <div class="p-txt">
+            <h2>MIMIDAR</h2>
+            <p>행福을 전하는 미미달</p>
+            <span>복을 염원하는 선조들의 마음을 담아<br>
             행복을 전하는 선물을 만듭니다</span>
-        </div>
-      </section><!--prologue-->
+          </div><!--p-txt-->
+        </div><!--inner-->
+      </div><!--#prologue-->
 
-      <section id="story">
+      <div id="story">
         <div class="inner">
           <div class="s-main">
             <img src="img/mimidar_logo.png" alt="미미달 로고">
@@ -133,21 +138,21 @@
             </div><!--img-left-->
             <div class="img-right">
               <ul>
-                <li><img src="img/flow_05.png" alt="이미지5"></li>
-                <li><img src="img/flow_06.png" alt="이미지6"></li>
-                <li><img src="img/flow_07.jpg" alt="이미지7"></li>
-                <li><img src="img/flow_08.jpg" alt="이미지8"></li>
                 <li><img src="img/flow_01.jpg" alt="이미지1"></li>
                 <li><img src="img/flow_02.png" alt="이미지2"></li>
                 <li><img src="img/flow_03.png" alt="이미지3"></li>
                 <li><img src="img/flow_04.jpg" alt="이미지4"></li>
+                <li><img src="img/flow_05.png" alt="이미지5"></li>
+                <li><img src="img/flow_06.png" alt="이미지6"></li>
+                <li><img src="img/flow_07.jpg" alt="이미지7"></li>
+                <li><img src="img/flow_08.jpg" alt="이미지8"></li>
               </ul>
             </div><!--img-right-->
           </div>
-        </div>
-      </section><!--story-->
+        </div><!--inner-->
+      </div><!--#story-->
 
-      <section id="shop">
+      <div id="shop">
         <div class="inner">
           <div class="shop-txt">
             <div class="s-txt-wrap">
@@ -255,9 +260,9 @@
             <div class="swiper-button-prev"></div>
           </div>
         </div>
-      </section><!--shop-->
+      </div>
 
-      <section id="series">
+      <div id="series">
         <div class="inner">
           <div class="ser-txt">
             <h2>mimidar series</h2>
@@ -336,10 +341,10 @@
           </div><!--content-wrap-->
           <span class="m-copy">mimidar</span>
           <span class="s-copy">series</span>
-        </div><!--inner-->
-      </section><!--series-->
+        </div>
+      </div>
 
-      <section id="gift">
+      <div id="gift">
         <div class="inner">
           <div class="g-wrap">
             <h2>mimidar gift</h2>
@@ -370,63 +375,8 @@
             <div class="swiper-pagination"></div>
           </div>
         </div><!--inner-->
-      </section><!--gift-->
-      <footer>
-        <div class="inner">
-          <h2>
-            <a href="#">
-              <img src="img/mimidar_logo_w.png" alt="mimidar">
-            </a>
-          </h2>
-          <div class="f-wrap">
-            <div class="cs-center">
-              <p>CS CENTER</p>
-              <div class="sub-txt">
-                <span>02-6483-0606 | </span>
-                <span>월-금 AM 10:30 - 19:00</span>
-                <span class="block">오른쪽 하단 채널상담 버튼 클릭</span>
-
-                <span class="block">OTHERS | </span>
-                <span>Guide</span>
-                <span class="block">Terms Of Use | </span>
-                <span>개인정보처리방침</span>
-              </div>
-            </div>
-
-            <div class="bank-info">
-              <p>BANK INFO</p>
-              <div class="sub-txt">
-                <div class="sub-txt-img">
-                  <img src="img/f_nuri.png" alt="문화누리">
-                </div>
-                <span>기업  018-193215-04-011 (주)미미디자인</span>
-              </div>
-            </div>
-
-            <div class="offer">
-              <p>비즈니스 제안 & 기업특판 상담</p>
-              <div class="sub-txt">
-                <span>mimidesign@mimidar.com</span>
-                <span>02-6483-0607</span>
-              </div>
-            </div>
-
-            <div class="com-info">
-              <p>COMPANY INFO</p>
-              <div class="sub-txt02">
-                <span>Company | (주)미미디자인</span>
-                <span>Master | 한상미 Han SangMi</p>
-                <span>Company reg.no | [192-81-03154]</span>
-                <span>E-mail | mimidesign@mimidar.com</span>
-                <span>Address | 02873 서울특별시 성북구 보문로 69 (보문동5가) 보문빌딩 3층</span>
-                <span>Hosting by cafe24, Copyright © 미미달. All rights reserved.</span>
-                <span>통신판매업신고번호 | 제2023-서울성북-1836호</span>
-              </div>
-            </div>
-          </div>
-        </div><!--inner-->
-      </footer>
-    </div><!--s-wrap-->
-  </div><!--#wrap-->
+      </div>
+    </div><!--#container-->
+  </div>
 </body>
 </html>
