--- a/index.html
+++ b/index.html
@@ -380,31 +380,30 @@
           </h2>
           <div class="f-wrap">
             <div class="cs-center">
-              <p>CS CENTER</p>
+              <p class="txt-bold">CS CENTER</p>
               <div class="sub-txt">
                 <span>02-6483-0606 | </span>
                 <span>월-금 AM 10:30 - 19:00</span>
-                <span class="block">오른쪽 하단 채널상담 버튼 클릭</span>
+                <p>오른쪽 하단 채널상담 버튼 클릭</p>
 
-                <span class="block">OTHERS | </span>
-                <span>Guide</span>
-                <span class="block">Terms Of Use | </span>
-                <span>개인정보처리방침</span>
+                <div class="sub-txt-a"></div>
+                <p><a href="#">OTHERS | </a> <span><a href="#">Guide</a></span></p>
+                <p><a href="#">Terms Of Use | </a><span><a href="#">개인정보처리방침</a></span></p>
               </div>
             </div>
 
             <div class="bank-info">
-              <p>BANK INFO</p>
+              <p class="txt-bold">BANK INFO</p>
               <div class="sub-txt">
                 <div class="sub-txt-img">
                   <img src="img/f_nuri.png" alt="문화누리">
                 </div>
-                <span>기업  018-193215-04-011 (주)미미디자인</span>
+                <p>기업  018-193215-04-011 <span>(주)미미디자인</span></p>
               </div>
             </div>
 
             <div class="offer">
-              <p>비즈니스 제안 & 기업특판 상담</p>
+              <p class="txt-bold">비즈니스 제안 & 기업특판 상담</p>
               <div class="sub-txt">
                 <span>mimidesign@mimidar.com</span>
                 <span>02-6483-0607</span>
@@ -412,10 +411,10 @@
             </div>
 
             <div class="com-info">
-              <p>COMPANY INFO</p>
+              <p class="txt-bold">COMPANY INFO</p>
               <div class="sub-txt02">
                 <span>Company | (주)미미디자인</span>
-                <span>Master | 한상미 Han SangMi</p>
+                <span>Master | 한상미 Han SangMi</span>
                 <span>Company reg.no | [192-81-03154]</span>
                 <span>E-mail | mimidesign@mimidar.com</span>
                 <span>Address | 02873 서울특별시 성북구 보문로 69 (보문동5가) 보문빌딩 3층</span>
