--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
 
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  
+  <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
+  <script src='https://unpkg.com/gsap@3/dist/CSSRulePlugin.min.js'></script>
+  <script src='https://assets.codepen.io/16327/CustomBounce3.min.js'></script>
+  <script src='https://assets.codepen.io/16327/CustomEase3.min.js'></script>
+  <script src='https://assets.codepen.io/16327/CustomWiggle3.min.js'></script>
+  <script src='https://assets.codepen.io/16327/DrawSVGPlugin3.min.js'></script>
+  <script src='https://unpkg.com/gsap@3/dist/Draggable.min.js'></script>
+  <script src='https://unpkg.com/gsap@3/dist/EaselPlugin.min.js'></script>
+  <script src='https://unpkg.com/gsap@3/dist/EasePack.min.js'></script>
+  <script src='https://assets.codepen.io/16327/Flip.min.js'></script>
+  <script src='https://assets.codepen.io/16327/GSDevTools3.min.js'></script>
+  <script src='https://assets.codepen.io/16327/InertiaPlugin.min.js'></script>
+  <script src='https://assets.codepen.io/16327/MorphSVGPlugin3.min.js'></script>
+  <script src='https://unpkg.com/gsap@3/dist/MotionPathPlugin.min.js'></script>
+  <script src='https://assets.codepen.io/16327/MotionPathHelper.min.js'></script>
+  <script src='https://assets.codepen.io/16327/PhysicsPropsPlugin3.min.js'></script>
+  <script src='https://assets.codepen.io/16327/Physics2DPlugin3.min.js'></script>
+  <script src='https://unpkg.com/gsap@3/dist/PixiPlugin.min.js'></script>
+  <script src='https://assets.codepen.io/16327/ScrambleTextPlugin3.min.js'></script>
+  <script src='https://unpkg.com/gsap@3/dist/ScrollToPlugin.min.js'></script>
+  <script src='https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js'></script>
+  <script src='https://assets.codepen.io/16327/SplitText3.min.js'></script>
+  <script src='https://unpkg.com/gsap@3/dist/TextPlugin.min.js'></script>
+  <script src='https://assets.codepen.io/16327/ScrollSmoother.min.js'></script>
+  <script src='https://unpkg.com/gsap/dist/Observer.min.js'></script><script  src="./script.js"></script>
+  
   <script src="js/common.js"></script>
 </head>
 <body>
@@ -106,15 +133,18 @@
     <div id="prologue">
       <div class="inner">
         <div class="pr-wrap">
-          <div class="pr-img"></div>
-          <div class="pr-txt">
+          <div class="upper-container">
             <h2>MIMIDAR</h2>
-            <p>행福을 전하는 미미달</p>
-            <span>
-              복을 염원하는 선조들의 마음을 담아<br>
-              행복을 전하는 선물을 만듭니다
-            </span>
           </div>
+        <div class="transition">
+            <div class="lower-container">
+                <div class="tit">
+                  행福을 전하는 미미달
+                </div>
+                <div class="sub01">복을 염원하는 선조들의 마음을 담아</div>
+                <div class="sub02">행복을 전하는 선물을 만듭니다</div>
+            </div>
+        </div>
         </div><!--pr-wrap-->
       </div><!--inner-->
     </div><!--prologue-->
