--- a/index.html
+++ b/index.html
@@ -16,26 +16,9 @@
   
   <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
   <script src='https://unpkg.com/gsap@3/dist/CSSRulePlugin.min.js'></script>
-
-  <script src='https://assets.codepen.io/16327/DrawSVGPlugin3.min.js'></script>
-  <script src='https://unpkg.com/gsap@3/dist/Draggable.min.js'></script>
-
-  <script src='https://assets.codepen.io/16327/Flip.min.js'></script>
-  <script src='https://assets.codepen.io/16327/GSDevTools3.min.js'></script>
-  <script src='https://assets.codepen.io/16327/InertiaPlugin.min.js'></script>
-  <script src='https://assets.codepen.io/16327/MorphSVGPlugin3.min.js'></script>
-  <script src='https://unpkg.com/gsap@3/dist/MotionPathPlugin.min.js'></script>
-  <script src='https://assets.codepen.io/16327/MotionPathHelper.min.js'></script>
-  <script src='https://assets.codepen.io/16327/PhysicsPropsPlugin3.min.js'></script>
-  <script src='https://assets.codepen.io/16327/Physics2DPlugin3.min.js'></script>
-  <script src='https://unpkg.com/gsap@3/dist/PixiPlugin.min.js'></script>
-  <script src='https://assets.codepen.io/16327/ScrambleTextPlugin3.min.js'></script>
   <script src='https://unpkg.com/gsap@3/dist/ScrollToPlugin.min.js'></script>
   <script src='https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js'></script>
-  <script src='https://assets.codepen.io/16327/SplitText3.min.js'></script>
-  <script src='https://unpkg.com/gsap@3/dist/TextPlugin.min.js'></script>
-  <script src='https://assets.codepen.io/16327/ScrollSmoother.min.js'></script>
-  <script src='https://unpkg.com/gsap/dist/Observer.min.js'></script><script  src="./script.js"></script>
+  <script  src="./script.js"></script>
 
   <script src="js/common.js"></script>
 </head>
